--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,43 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+
+
 buildscript {
-    ext.kotlin_version = '1.2.61'
-    ext.dokkaVersion = '0.9.17'
+
+    ext.versions = [
+            'retrofit'      : '2.3.0',
+
+            'moshi'         : '1.7.0',
+            'kotshi'        : '1.0.5',
+            'picasso'       : '2.5.2',
+
+            'architecture'  : '1.1.1',
+            'dokka'         : '0.9.17',
+
+            'kotlin'        : '1.2.71',
+            'suport'        : '28.0.0',
+
+            "okHttp"        : '3.11.0',
+
+            'gradle'        : '3.2.0',
+            'buildTools'    : '27.0.3',
+            'minSdk'        : 21,
+            'targetSdk'     : 28,
+            'dagger'        : "2.16"
+    ]
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:$dokkaVersion"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.android.tools.build:gradle:$versions.gradle"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
+        classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:$versions.dokka"
+
     }
 }
+
 
 allprojects {
     repositories {
