--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'org.jetbrains.dokka-android'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion versions.targetSdk
     defaultConfig {
@@ -63,6 +65,9 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:$versions.architecture"
 
 
+    // RxJava
+    implementation "io.reactivex.rxjava2:rxjava:$versions.rx"
+    implementation "io.reactivex.rxjava2:rxandroid:$versions.rxandroid"
 
     implementation "com.squareup.moshi:moshi-kotlin:$versions.moshi"
     //implementation "se.ansman.kotshi:api:$versions.kotshi"
@@ -79,6 +84,7 @@ dependencies {
     // Adding the annotationProcessor plugin will add these files into the IDE classpath
     // and enable you to have more visibility.
     annotationProcessor "com.google.dagger:dagger-compiler:$versions.dagger"
+    kapt "com.google.dagger:dagger-compiler:$versions.dagger"
     annotationProcessor "com.google.dagger:dagger-android-processor:$versions.dagger"
 
     testImplementation 'junit:junit:4.12'
